# P2P-project

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  P2P  build.gradle
app/src/androidTest/java/com/example/mac/back/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: app-debug.apk  javascript.html  user_parden.html  新手乐园.html
app/src/main/assets/新手乐园_files/: base64_decode.js  core.php  novice-paradise3.css  tj.html  z_stat.php
app/src/main/cpp/: com_cundong_utils_PatchUtils.cpp  com_cundong_utils_PatchUtils.h  native-lib.cpp
app/src/main/res/drawable/: btn_more_login.xml  btn_next.xml  button.xml  button_line.xml  circle_progress_bar.xml  home_theme.xml  loading_anim.xml  selector_tab_background.xml  selector_text_background.xml  sign.xml  splash.xml  tab_home.xml  tab_more.xml  tab_my.xml  tab_produce.xml  textview_border.xml
app/src/main/res/layout/: activity_browser.xml  activity_login.xml  activity_logins.xml  activity_main.xml  activity_productdetail.xml  activity_register.xml  activity_userticket.xml  activity_webview.xml  dialog_custom.xml  dialog_layout.xml  firstin_layout.xml  fragment1.xml  fragment4.xml  fragment5.xml  fragment_more.xml  fragment_my.xml  fragment_product.xml  homepage_theme_item.xml  item_draglayout.xml  item_ticket.xml  layout_divider.xml  layout_nologin.xml  layout_title.xml  my_viewgroup.xml  myview.xml  product_one.xml  product_two.xml  tab_content.xml  title_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
(+163 files in other folders)
